@@ -1,2 +1,0 @@
-# this file is here to make Install.py and utils.py importable.
-# keep these lines to make it non-zero size and have winzip cooperate.
