@@ -1,14 +1,23 @@
+""" cache module for Products.EEATemplateService
+"""
 import urllib
 
 from Products.CMFCore.utils import getToolByName
 from Products.Five.browser import BrowserView
 from zope.interface import implements
-from interfaces import IClientsCache
+from Products.EEATemplatesService.browser.interfaces import IClientsCache
 #from Products.CMFSquidTool.queue import queue
 #from Products.CMFSquidTool.utils import pruneUrl
 
-class ClientsCache(BrowserView):
+# TODO: plone4 caching logic needs to be replaced with logic from
+# plone.app.caching
+# added pruneUrl function for pylint warnings 
+def pruneUrl():
+    """ pruneUrl dummy function until logic for cache is changed """
+    return 1
 
+class ClientsCache(BrowserView):
+    """ ClientsCache BrowserView """
     implements(IClientsCache)
     
     def __init__(self, context, request):
@@ -23,7 +32,8 @@ class ClientsCache(BrowserView):
         # don't fail if EEATemplateService profile and config is not loaded
         if ts_props is not None:
             squid = getToolByName(self.context, 'portal_squid')
-            purge_urls = squid.computePurgeUrls(ts_props.getProperty('template_urls', []))
+            purge_urls = squid.computePurgeUrls(
+                            ts_props.getProperty('template_urls', []))
             for url in purge_urls:
                 _status, _xcache, _xerror = pruneUrl(url, 'PURGE')
                 report += 'squid: %s\r\n' % url
