@@ -10,11 +10,4 @@
       permission="zope.Public"
       />
       
-    <!--<browser:viewlet-->
-    <!--    name="plone.footer"-->
-    <!--    class=".viewlets.FooterPortletsViewlet"-->
-    <!--    manager="plone.app.layout.viewlets.interfaces.IPortalFooter"-->
-    <!--    layer=".interfaces.IEEACommonLayer"-->
-    <!--    permission="zope2.View"-->
-    <!--    />-->
 </configure>
