@@ -1,4 +1,8 @@
+""" browser interfaces module
+"""
+
 from zope.interface import Interface
 
 class IClientsCache(Interface):
+    """ IClientsCache interface """
     pass
