@@ -3,33 +3,20 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-    xmlns:monkey="http://namespaces.plone.org/monkey">
+    i18n_domain="eea">
+
+    <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
+
 
     <include package=".browser" />
-<cmf:registerDirectory name="skins" directory="skins" recursive="True" />
-
-  <genericsetup:registerProfile
-      name="default"
-      title="Products.EEATemplatesService"
-      directory="profiles/default"
-      description='Extension profile for the Products.EEATemplatesService'
-      provides="Products.GenericSetup.interfaces.EXTENSION"
-      />
-
-    <!--<monkey:patch -->
-    <!--    description="Monkeypatch portal CSS registry"-->
-    <!--    class="Products.ResourceRegistries.tools.CSSRegistry.CSSRegistryTool"-->
-    <!--    original="manage_saveStylesheets"-->
-    <!--    preserveOriginal=True-->
-    <!--    replacement=".patches.manage_saveStylesheets"-->
-    <!--    />-->
-
-    <!--<monkey:patch -->
-    <!--    description="Monkeypatch portal JS registry"-->
-    <!--    class="Products.ResourceRegistries.tools.JSRegistry.JSRegistryTool"-->
-    <!--    original="manage_saveScripts"-->
-    <!--    preserveOriginal=True-->
-    <!--    replacement=".patches.manage_saveScripts"-->
-    <!--    />-->
+    <include file="patches.zcml" />
+    
+    <genericsetup:registerProfile
+        name="default"
+        title="Products.EEATemplatesService"
+        directory="profiles/default"
+        description='Extension profile for the Products.EEATemplatesService'
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
 
 </configure>
