@@ -1,0 +1,21 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:monkey="http://namespaces.plone.org/monkey"
+    i18n_domain="eea">
+
+    <monkey:patch 
+        description="Monkeypatch portal CSS registry"
+        class="Products.ResourceRegistries.tools.CSSRegistry.CSSRegistryTool"
+        original="manage_saveStylesheets"
+        replacement=".patches.manage_saveStylesheets"
+        preserveOriginal="true"
+        />
+
+    <monkey:patch 
+        description="Monkeypatch portal JS registry"
+        class="Products.ResourceRegistries.tools.JSRegistry.JSRegistryTool"
+        original="manage_saveScripts"
+        replacement=".patches.manage_saveScripts"
+        preserveOriginal="true"
+        />
+</configure>
