@@ -1,3 +1,3 @@
-"""\
+"""
 To run all tests type 'python runalltests.py'
 """
