@@ -1,6 +1,8 @@
 # -*- coding: utf-8 -*-
+""" testDocTests module 
+"""
 
-import base
+from Products.EEATemplatesService.tests import base
 import unittest
 from zope.testing import doctest
 
@@ -10,8 +12,9 @@ from Products.CMFSquidTool.tests.test_connections import start_proxied_server
 import time
 
 class CacheTestCase(base.EEATemplatesService):
-    
+    """ CacheTestCase test class """
     def afterSetUp(self):
+        """ afterSetUp test method """
         self.setRoles(['Manager'])
         cacheTool = getToolByName(self.portal, 'portal_cache_settings', None)
         cacheTool.setProxyPurgeConfig('custom-rewrite')
@@ -19,10 +22,12 @@ class CacheTestCase(base.EEATemplatesService):
         cacheTool.setDomains(['http://nohost:80'])
         cacheTool.setEnabled(True)
         squidTool = getToolByName(self.portal, 'portal_squid', None)        
-        squidTool.setUrlExpression('python:object.portal_cache_settings.getUrlsToPurge(object)')
+        squidTool.setUrlExpression(
+                'python:object.portal_cache_settings.getUrlsToPurge(object)')
         self.httpd, self.httpt = start_proxied_server()
         
     def beforeTearDown(self):
+        """ beforeTearDown test method """
         try:
             # If anything remains in our response queue, it means the test
             # failed (but - we give it a little time to stop.)
@@ -31,7 +36,9 @@ class CacheTestCase(base.EEATemplatesService):
                     if self.httpd.response_queue.empty():
                         break
                     time.sleep(0.1)
-                self.failUnless(self.httpd.response_queue.empty(), "response queue not consumed")
+                self.failUnless(
+                        self.httpd.response_queue.empty(),
+                            "response queue not consumed")
             if not stopThreads(wait=True):
                 self.fail("The purge threads did not stop")
         finally:
@@ -42,6 +49,7 @@ class CacheTestCase(base.EEATemplatesService):
                 self.httpt = None
 
 def test_suite():
+    """ main test_suite function """
     from Testing.ZopeTestCase import FunctionalDocFileSuite
 
     return unittest.TestSuite((
